Orchestrator/myservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: orchestrator
  labels:
    service: orchestrator
spec:
  selector:
    app: orchestrator
  ports:
  - port: 5000
    targetPort: 5000
