Orchestrator/minikube-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: minikube-ingress
  annotations:
spec:
  rules:
  - host: hello.world
    http:
      paths:
      - path: /api/values
        backend:
          serviceName: orchestrator
          servicePort: 5000
